--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "node src/test.js"
   },
   "author": "Frank",
   "license": "ISC"
